Update index.html with writing assignment paragraph

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <h1>About Pinterest's Software Design</h1>
+    <h1>Writing Assignment 1</h1>
 
     <p>
         A software I personally find well designed is Pinterest. Pinterest is a visual discovery platform that caters to people of all demographics. Pinterest has features like curated content based on individual interest, easy organisation of ideas using their board system and a new feature where there is extra personalization of your search based on hair type or colour palette. Pinterest also has visual search which makes it extremely simple and efficient to find certain products or find similar posts, and is easy to use. It is also very simple to upload your own pictures to your profile and you can grow your platform too using the software’s analytics system. Additionally, Pinterest has mobile and web apps that are seamlessly integrated making user experience simple and consistent. Pinterest’s software design enhances user experience and retention by offering a visually appealing and easy-to-use platform for organising and discovering inspiration. Software design is critical because it directly impacts how users interact with a product, it ensures the product’s functionality and usability. Strong software design is the base for a product’s long term success and its maintainability. Ultimately, Pinterest exemplifies how thoughtful software design can drive both engagement and user satisfaction.
