--- a/index.html
+++ b/index.html
@@ -13,5 +13,19 @@
         A software I personally find well designed is Pinterest. Pinterest is a visual discovery platform that caters to people of all demographics. Pinterest has features like curated content based on individual interest, easy organisation of ideas using their board system and a new feature where there is extra personalization of your search based on hair type or colour palette. Pinterest also has visual search which makes it extremely simple and efficient to find certain products or find similar posts, and is easy to use. It is also very simple to upload your own pictures to your profile and you can grow your platform too using the software’s analytics system. Additionally, Pinterest has mobile and web apps that are seamlessly integrated making user experience simple and consistent. Pinterest’s software design enhances user experience and retention by offering a visually appealing and easy-to-use platform for organising and discovering inspiration. Software design is critical because it directly impacts how users interact with a product, it ensures the product’s functionality and usability. Strong software design is the base for a product’s long term success and its maintainability. Ultimately, Pinterest exemplifies how thoughtful software design can drive both engagement and user satisfaction.
     </p>
 
+    <h2>Writing Assignment 2</h2>
+    <p>
+        The requirements gathering stage is the first phase of the software development process. This is the stage where all the required functionalities and operations of the software are documented, with very close and frequent communication with the client. The clients and/or the stakeholders discuss exactly what they want to see in the software and why they want it. This is all documented in a requirements table which will then serve as a blueprint to begin the developmental process. As this stage is the base for the software, it is extremely important. The main discussion between the clients and the developers is crucial to avoid misunderstandings and unnecessary requirements that may cause requirements bloat or other problems. It is a strong starting point for the project with a clear understanding of what the client is wanting. It is important to make sure all expectations are valid and can be met with a clear map of the process.
+    </p>
+
+    <h2>User Stories</h2>
+    <ul>
+        <li>As a user, I want to save images to different boards, so that I can organize my ideas by category.</li>
+        <li>As a user, I want to visually search for similar images, so that I can quickly find related content without typing keywords.</li>
+        <li>As a content creator, I want to track the analytics of my pins, so that I can grow my platform.</li>
+        <li>As a mobile user, I want to sync between the app and the web platform, so that I can have flexibility between platforms.</li>
+        <li>As a user, I want to easily upload my own images, so that I can share my ideas and inspirations with others on the platform.</li>
+    </ul>
+
 </body>
 </html>
