Update index.html with writing assignment 3

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Website Title</title>
 </head>
-<body>
-
+<body>  
     <h1>Writing Assignment 1</h1>
 
     <p>
@@ -26,6 +25,39 @@
         <li>As a mobile user, I want to sync between the app and the web platform, so that I can have flexibility between platforms.</li>
         <li>As a user, I want to easily upload my own images, so that I can share my ideas and inspirations with others on the platform.</li>
     </ul>
+
+    <h2>Persona: Areta, the Freelance Interior Designer</h2>
+    <h3>Demographics</h3>
+    <ul>
+        <li><strong>Name:</strong> Areta</li>
+        <li><strong>Age:</strong> 24</li>
+        <li><strong>Occupation:</strong> Freelance Interior Designer</li>
+        <li><strong>Location:</strong> Toronto</li>
+        <li><strong>Education:</strong> Bachelor's degree in Interior Design</li>
+    </ul>
+
+    <h3>Background</h3>
+    <p>
+        Areta is a creative professional whose work focuses on finding inspiration from visual content. She uses Pinterest daily for her projects, to explore trends and DIY projects to mold to her clients' wants. As a freelancer, she needs a reliable tool to help organize her ideas and to find inspiration.
+    </p>
+
+    <h3>Motivations</h3>
+    <ul>
+        <li>Her clients: She wants to make sure she can give them her best ideas and find the perfect fit for them.</li>
+        <li>Her brand: She wants to keep track of her content and find new visual ideas to adapt to her style.</li>
+    </ul>
+
+    <h3>Behaviors</h3>
+    <ul>
+        <li>She checks Pinterest every day, for both professional and personal use, especially during intense design projects.</li>
+        <li>She uses the visual search feature of Pinterest the most to find similar products or color schemes.</li>
+        <li>She prefers mobile usage for quick inspiration and desktop for detailed searches.</li>
+    </ul>
+
+    <h3>Quote from Areta</h3>
+    <blockquote>
+        "Pinterest is my go-to source when I hit a creative block."
+    </blockquote>
 
 </body>
 </html>
