Update index.html with writing assignment 4

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 </head>
 <body>  
     <h1>Writing Assignment 1</h1>
-
     <p>
         A software I personally find well designed is Pinterest. Pinterest is a visual discovery platform that caters to people of all demographics. Pinterest has features like curated content based on individual interest, easy organisation of ideas using their board system and a new feature where there is extra personalization of your search based on hair type or colour palette. Pinterest also has visual search which makes it extremely simple and efficient to find certain products or find similar posts, and is easy to use. It is also very simple to upload your own pictures to your profile and you can grow your platform too using the software’s analytics system. Additionally, Pinterest has mobile and web apps that are seamlessly integrated making user experience simple and consistent. Pinterest’s software design enhances user experience and retention by offering a visually appealing and easy-to-use platform for organising and discovering inspiration. Software design is critical because it directly impacts how users interact with a product, it ensures the product’s functionality and usability. Strong software design is the base for a product’s long term success and its maintainability. Ultimately, Pinterest exemplifies how thoughtful software design can drive both engagement and user satisfaction.
     </p>
@@ -58,6 +57,14 @@
     <blockquote>
         "Pinterest is my go-to source when I hit a creative block."
     </blockquote>
+
+    <h2>Writing Assignment 4</h2>
+    <p>
+        Communication is crucial in software design especially during the initial developmental stages. Clear communication during the beginning stages of a product development process assures an accurate result. Communication ensures that the vision for the particular product aligns with all that are involved in the project like the developers, clients, stakeholders. It is also extremely important in avoiding misunderstandings and enhancing project efficiency. Key elements of effective communication include adaptability, body language and active listening. The requirements and vision for a project may change depending on the functionality of the product and the client's wishes, therefore adaptability is important to keep an open mind and respond to changes effectively. Proper body language and active listening techniques are also an important part of communicating with clients. Non-verbal clues such as facial expressions, gestures, and eye contact can help make clients more at ease and comfortable to discuss certain issues. It can also be a sign of respect and willingness to collaborate.
+    </p>
+    <p>
+        A personal experience I can share regarding a miscommunication issue is when I was doing an internship in high school at a newspaper. I was given the task to put together a list of the new toll booth fares for all kinds of vehicles for a newly built flyover in a visual layout. The task was given to me by my supervisor at the end of a weekly team meeting over Zoom. I misheard my supervisor regarding how the layout would be made; I thought she said I had to make my own template from scratch, whereas she actually said to use a template from previous years. I did the task wrong and had to redo it later. With the knowledge I have now, I would make a summary of what she asked me to do and confirm with her verbally if it was right. I would ask more questions to be completely clear on the matter.
+    </p>
 
 </body>
 </html>
