Update index.html with writing assignment 5

--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
     <p>
         A personal experience I can share regarding a miscommunication issue is when I was doing an internship in high school at a newspaper. I was given the task to put together a list of the new toll booth fares for all kinds of vehicles for a newly built flyover in a visual layout. The task was given to me by my supervisor at the end of a weekly team meeting over Zoom. I misheard my supervisor regarding how the layout would be made; I thought she said I had to make my own template from scratch, whereas she actually said to use a template from previous years. I did the task wrong and had to redo it later. With the knowledge I have now, I would make a summary of what she asked me to do and confirm with her verbally if it was right. I would ask more questions to be completely clear on the matter.
     </p>
+    <h2>Writing Assignment 5</h2>
+    <p>
+        A design principle I want to work on for this assignment is simplicity. Simplicity in software design refers to creating design and solutions that are straightforward and devoid of unnecessary complexity. Simplicity emphasises working and perfecting exactly what is needed for current projects and requirements and leaving room for future changes if needed. This principle makes sure that the output is efficient and effective for what it's required to do, ultimately improving both developer and user experiences. Simplicity is crucial in software design because unnecessary complexity causes unexpected behaviours from the software and increases the time frame due to long debugging sessions. When systems are simple, developers can more easily understand how different components interact, enabling quicker identification and resolution of issues.
+    </p>
+    <p>
+        Google’s homepage is a good example of simplicity in software design. The page has a search bar and a few buttons for bookmarking, reading lists etc. This reduces noise and distractions for users when they come to look something up. It gives them space to focus on the task at hand. This simplicity has been instrumental in establishing Google’s user-friendly reputation. Another software that has many features and many functionalities but still maintains a simple and user friendly interface is the productivity app Notion. The initial blank page users are given to start with have labeled tabs and buttons to help users build their own workspace. It has a minimalist design and modular structure, making it not only look clean but simple to use. In both of these examples, simplicity is prioritized, giving them efficiency by reducing unnecessary complexity, enabling users to achieve their goals quickly and effectively, and ensuring that the software remains intuitive, adaptable, and easy to maintain over time.  
+</p>
+    
 
 </body>
 </html>
